--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.container{
+    max-width: 1400px;
+    margin: 50px auto;
+}
 .link{
     width: 250px;
     height: 70px;
@@ -30,8 +35,7 @@
 }
 .usersInput{
     display: flex;
-    flex-direction: column;
-    gap: 30px;
+    align-items: center;
 }
 .usersInput input{
     font-size: 16px;
